fixed some gui / attack stuff